[package]
name = "protohackers"
version = "0.1.0"
edition = "2021"
authors = ["Connor Mooney-Collett <connor.mooneycollett@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4.3", features = ["serde"] }
num-traits = "0.2.15"
serde_json = { version = "1.0.91", features = ["arbitrary_precision"] }
